test/fail/suggest-local-type.mo
type Foo = Int;
type Zap = [Fo];
